# ig-api

./: .env.sample  .gitignore  404.html  README.md  gemini.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: deploy-docs.yml
api/: index.html
docs/: api.md  index.md  usage.md
docs/sample/: connect_client.ipynb  connect_client.py  markets_demo.ipynb  session_demo.ipynb
notebooks/: session_demo.ipynb
sample/connect_client/: index.html
sample/markets_demo/: index.html
sample/session_demo/: index.html
search/: search_index.json
src/ig_api/: client.py
src/ig_api/core/: api.py
src/ig_api/services/: accounts.py  markets.py  session.py
tests/: conftest.py  test_accounts_service.py  test_client.py  test_markets_service.py  test_session_service.py
usage/: index.html
